name:                tansu-sqlite3
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
copyright:           2015 Getty Ritter
category:            Database
build-type:          Simple
cabal-version:       >=1.10

flag build-example
  description: Build Example application
  default:     False

library
  exposed-modules:     Database.Tansu.Backend.SQLite3
  build-depends:       base >=4.8 && <4.9,
                       tansu,
                       bytestring,
                       text,
                       directory,
                       direct-sqlite
  default-language:    Haskell2010

executable sample
  if !flag(build-example)
    buildable: False
  main-is: Main.hs
  build-depends: base, tansu, tansu-sqlite3
  hs-source-dirs: sample
  default-language: Haskell2010
